--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-apollo": "^2.4.0",
+    "apollo-boost": "^0.1.27"
   },
   "keywords": [
     "gatsby"
@@ -38,5 +40,8 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "resolutions": {
+    "graphql": "0.13.2"
   }
 }
